2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/src/pspinlocktranslatereturncode.c:
	Include <rtems/posix/spinlock.h> (Missing prototypes).
	* libfs/src/imfs/imfs_debug.c: Make IMFS_print_jnode, 
	IMFS_dump_directory static.
	* libfs/src/imfs/memfile.c: Make memfile_free_blocks_in_table static.
	* libcsupport/include/rtems/libio.h:
	Make LIBIO_FLAGS_* defined unsigned (Avoid implicit sign
	conversions).

2011-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/capture/capture.c: 
	Make RTEMS_CAPTURE_* defines unsigned (Avoid implicit
	sign conversions).
	Make rtems_capture_trigger static (Missing prototypes).
	Make rtems_capture_trigger static (Missing prototypes).
	* libmisc/capture/capture.h:
	Make RTEMS_CAPTURE_WATCH, RTEMS_CAPTURE_TRACED unsigned (Avoid
	implicit sign conversions).

2011-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/src/rtemsobjectapimaximumclass.c: 
	Include <rtems/rtems/object.h> (Missing prototypes).
	* sapi/src/exshutdown.c:
	Include <rtems/init.h> (Missing prototypes).
	* libmisc/mouse/mouse_parser.c: Make MOU_Data static.

2011-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/chown.c, libcsupport/src/lchown.c:
	Include <unistd.h>. Cleanup included headers.

2011-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/rtems/posix/pthread.h:
	Add _POSIX_Threads_Initialize_user_threads_body.
	* rtems/include/rtems/rtems/tasks.h:
	Add _RTEMS_tasks_Initialize_user_tasks_body.
	* sapi/include/confdefs.h: Remove conditional, nested redeclaration of 
	_POSIX_Threads_Initialize_user_threads_body,
	_RTEMS_tasks_Initialize_user_tasks_body.

2011-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/shell/shell.h: Add rtems_shell_main_monitor.
	* libmisc/shell/cmds.c: Make rtems_shell_main_monitor non-static.

2011-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/src/tasks.c: Fix typos.
	* rtems/src/taskinitusers.c: Fix typos.
	* posix/src/pthread.c: Fix typos.