@@ -25,7 +25,7 @@ int _Scheduler_CBS_Destroy_server (
   int ret = SCHEDULER_CBS_OK;
   rtems_id tid;
 
-  if ( server_id < 0 || server_id >= _Scheduler_CBS_Maximum_servers )
+  if ( server_id >= _Scheduler_CBS_Maximum_servers )
     return SCHEDULER_CBS_ERROR_INVALID_PARAMETER;
 
   if ( !_Scheduler_CBS_Server_list[server_id] )
